--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
