--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native": "0.70.5",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-reanimated": "~2.12.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "expo-sqlite": "~11.0.0",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
