--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
     "expo": "~47.0.12",
+    "expo-splash-screen": "~0.17.5",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-reanimated": "~2.12.0",
-    "react-native-svg": "13.4.0",
-    "expo-sqlite": "~11.0.0",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-svg": "^13.4.0",
+    "@react-native-community/datetimepicker": "6.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
