--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.70.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-numeric-input": "^1.9.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-svg": "^13.4.0"
   },
