--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "drinks-tracker",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -23,8 +22,11 @@
     "react-native": "0.70.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-numeric-input": "^1.9.1",
     "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
